# VK_WORK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  project_cmake.kdev4  run.sh
__build/: CMakeCache.txt  HeyVulkan  Makefile  cmake_install.cmake
configuration/: root_directory.h
shader/: test.vs.vert
src/: Application.cpp  Application.hpp  MyApp.hpp  main.cpp  vkutil.hpp
